# AuxPort

./: AuxPort_Library.sln  CMakeLists.txt  Citation.cff  LICENSE  LICENSE.md  README.md  _aux_buffer_8h_source.html  _aux_case_8cpp_source.html  _aux_case_8h_source.html  _aux_caster_8h_source.html  _aux_circular_buffer_8h_source.html  _aux_crypto_8cpp_source.html  _aux_crypto_8h_source.html  _aux_curl_8cpp_source.html  _aux_curl_8h_source.html  _aux_distortion_8cpp_source.html  _aux_distortion_8h_source.html  _aux_env_8h_source.html  _aux_f_f_t_8cpp_source.html  _aux_f_f_t_8h_source.html  _aux_f_i_r_8cpp_source.html  _aux_f_i_r_8h_source.html  _aux_file_8cpp_source.html  _aux_file_8h_source.html  _aux_i_i_r_8cpp_source.html  _aux_i_i_r_8h_source.html  _aux_log_8cpp_source.html  _aux_log_8h_source.html  _aux_math_8cpp_source.html  _aux_math_8h_source.html  _aux_oscillator_8cpp_source.html  _aux_oscillator_8h_source.html  _aux_pan_8cpp_source.html  _aux_pan_8h_source.html  _aux_pascal_8cpp_source.html  _aux_pascal_8h_source.html  _aux_port_8h_source.html  _aux_series_8cpp_source.html  _aux_series_8h_source.html  _aux_simd_8cpp_source.html  (+297 more)
AuxBench/: AuxBench.h  CMakeLists.txt
AuxPort/: AuxPort.h  CMakeLists.txt
AuxPort/Audio/Algorithms/: AuxADAADNC.cpp  AuxADAADNC.h
AuxPort/Audio/Buffer/: AuxBuffer.h
AuxPort/Audio/Compressor/: AuxCompressor.cpp  AuxCompressor.h
AuxPort/Audio/Effects/Delay/: AuxDelay.cpp  AuxDelay.h
AuxPort/Audio/Effects/Distortion/: AuxDistortion.cpp  AuxDistortion.h
AuxPort/Audio/Effects/Gain/: AuxGain.cpp  AuxGain.h  AuxMixer.cpp  AuxMixer.h  AuxPan.cpp  AuxPan.h
AuxPort/Audio/Effects/Templates/: AuxEffect.cpp  AuxEffect.h
AuxPort/Audio/Envelope/: AuxEnvelope.cpp  AuxEnvelope.h
AuxPort/Audio/FFT/: AuxFFT.cpp  AuxFFT.h
AuxPort/Audio/Filters/: AuxFIR.cpp  AuxFIR.h  AuxIIR.cpp  AuxIIR.h
AuxPort/Audio/Interpolation/: AuxInterpolation.cpp  AuxInterpolation.h
AuxPort/Audio/Oscillators/: AuxOscillator.cpp  AuxOscillator.h
AuxPort/Audio/Spectral/: AuxSpectral.h
AuxPort/Audio/Stimulus/: AuxStimulus.cpp  AuxStimulus.h
AuxPort/Audio/Transforms/: AuxWH.cpp  AuxWH.h
AuxPort/Audio/Windows/: AuxWindow.h
AuxPort/AuxUICmake/: CMakeLists.txt
AuxPort/Core/Casters/: AuxPort_Caster.h
AuxPort/Core/Crypto/: AuxCrypto.cpp  AuxCrypto.h
AuxPort/Core/Env/: AuxDebug.h  AuxEnv.h
AuxPort/Core/File/: AuxFile.cpp  AuxFile.h  AuxPort_File.h
AuxPort/Core/Log/: AuxLog.cpp  AuxLog.h  AuxPort_Log.cpp  AuxPort_Log.h
AuxPort/Core/SIMD/: AuxSimd.cpp  AuxSimd.h
AuxPort/Core/String/: AuxPort_String.cpp  AuxPort_String.h  AuxPort_StringObjectArray.cpp  AuxPort_StringObjectArray.h  AuxPort_StringPair.cpp  AuxPort_StringPair.h  AuxString.cpp  AuxString.h  AuxStringPair.cpp  AuxStringPair.h
AuxPort/Core/TestCase/: AuxCase.cpp  AuxCase.h
AuxPort/Core/Time/: AuxPort_Time.cpp  AuxPort_Time.h  AuxTime.cpp  AuxTime.h
AuxPort/Core/Tree/: AuxAVL.cpp  AuxAVL.h
AuxPort/Core/Utility/: AuxCaster.cpp  AuxCaster.h  AuxCircularBuffer.cpp  AuxCircularBuffer.h  AuxMath.cpp  AuxMath.h  AuxPascal.cpp  AuxPascal.h  AuxPort_Caster.h  AuxPort_Sort.h  AuxSeries.cpp  AuxSeries.h  AuxThread.cpp  AuxThread.h  AuxUtility.cpp  AuxUtility.h
AuxPort/Graphics/Images/: AuxImage.cpp  AuxImage.h
AuxPort/Graphics/SVG/: AuxSVG.cpp  AuxSVG.h  AuxSVGColour.cpp  AuxSVGColour.h  AuxSVGObject.cpp  AuxSVGObject.h  AuxSVGPath.cpp  AuxSVGPath.h  AuxSVGText.cpp  AuxSVGText.h
AuxPort/Graphics/Scopes/: AuxScope.cpp  AuxScope.h
AuxPort_Library/: AuxPort_Library.vcxproj  AuxPort_Library.vcxproj.filters
AuxPort_Library/include/: AuxPort.h
AuxTest/: AuxTest.cpp  AuxTest.h  CMakeLists.txt
DevLogs/: 16-02-2021.md
Docs/: _aux_caster_8h_source.html  _aux_curl_8h_source.html  _aux_env_8h_source.html  _aux_file_8h_source.html  _aux_log_8h_source.html  _aux_math_8h_source.html  _aux_pan_8h_source.html  _aux_simd_8h_source.html  _aux_string_8h_source.html  _aux_test_8h_source.html  _aux_time_8h_source.html  _aux_utility_8h_source.html  annotated.html  annotated_dup.js  class_aux_port_1_1_about.html  class_aux_port_1_1_audio_1_1_a_d_s_r.html  class_aux_port_1_1_audio_1_1_a_d_s_r.js  class_aux_port_1_1_audio_1_1_bartlett_f_i_r.html  class_aux_port_1_1_audio_1_1_bartlett_hann_f_i_r.js  class_aux_port_1_1_audio_1_1_bipolar_sawtooth.html  class_aux_port_1_1_audio_1_1_bipolar_sawtooth.js  class_aux_port_1_1_audio_1_1_blackman_harris_f_i_r.js  class_aux_port_1_1_audio_1_1_buffer.js  class_aux_port_1_1_audio_1_1_convolution.html  class_aux_port_1_1_audio_1_1_discrete_fourier_transform.html  class_aux_port_1_1_audio_1_1_discrete_fourier_transform.js  class_aux_port_1_1_audio_1_1_distortion-members.html  class_aux_port_1_1_audio_1_1_f_i_r.js  class_aux_port_1_1_audio_1_1_fourier_transform.html  class_aux_port_1_1_audio_1_1_fourier_transform.js  class_aux_port_1_1_audio_1_1_hann_f_i_r.js  class_aux_port_1_1_audio_1_1_i_i_r_1_1_butterworth.html  class_aux_port_1_1_audio_1_1_i_i_r_1_1_butterworth.js  class_aux_port_1_1_audio_1_1_i_i_r_1_1_engine.html  class_aux_port_1_1_audio_1_1_i_i_r_1_1_engine.js  class_aux_port_1_1_audio_1_1_i_i_r_1_1_first_order.js  class_aux_port_1_1_audio_1_1_i_i_r_1_1_general.html  class_aux_port_1_1_audio_1_1_i_i_r_1_1_parametric_e_q.js  class_aux_port_1_1_audio_1_1_k_p_string.js  class_aux_port_1_1_audio_1_1_nuttall_f_i_r.html  (+87 more)
Extensions/AuxCurl/: AuxCurl.cpp  AuxCurl.h  CMakeLists.txt
Extensions/AuxGui/: AuxGui.cpp  AuxGui.h  CMakeLists.txt
Extensions/AuxRtAudio/: AuxRtAudio.cpp  AuxRtAudio.h  CMakeLists.txt  main.cpp
docs/: CNAME
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_f.js  classes_10.js  classes_12.js  classes_13.js  classes_5.js  enums_2.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_1.js  functions_11.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_c.js  functions_f.js  pages_0.js  searchdata.js
(+222 files in other folders)
